@@ -1,8 +1,9 @@
-2017-03-24
+2017-03-27
 
         * Version 1.3.0 released
         =========================
 
+        Enhance precision of GCTAEdisp2D::compute_ebounds_src
         Add conversion methods between GEbounds and GEnergies (#1977)
         Add GModelSpectralSmoothBrokenPlaw class (#1948)
         Implement lazy loading of energy dispersion in GCTAEdisp2D (#1940)
